# RoleChatLib

./: .gitignore  CMakeLists.txt  README.md  build.bat
include/rolechat/: viewport_scene.h
include/rolechat/actor/: ActorEmote.h  ActorLayer.h  ActorOutfit.h  ActorScalingMode.h  ActorScalingPreset.h  ActorSelectEntry.h  ActorUserManager.h  IActorData.cpp  IActorData.h  JsonActorData.h
include/rolechat/audio/: AudioSfxEntry.h
include/rolechat/background/: BackgroundPosition.h  IBackgroundData.h  JsonBackgroundData.h
include/rolechat/config/: ConfigUserSettings.h
include/rolechat/dialogue/: DialogueCharacter.h  DialogueColor.h  DialogueEmoteMode.h  DialogueMessage.h  DialogueTag.h  DialogueTagType.h  DialogueTypes.h
include/rolechat/filesystem/: RCDir.h  RCFile.h
include/rolechat/math/: RPRect.h
include/rolechat/server/: ServerVersionStatus.h
include/rolechat/theme/: ThemeElement.h  ThemeFont.h  ThemeGameMode.h  ThemeGroup.h  ThemeHighlight.h  ThemeManager.h  ThemeModule.h  ThemeScene.h  ThemeTextColor.h
include/rolechat/user/: UserState.h
include/rolechat/userdata/: RolechatDatabase.h  SQLColumn.h  SQLDB.h  SQLSelect.h  SQLStmt.h  SQLTable.h
include/rolechat/util/: FileSystem.h  JsonUtils.h
src/rolechat/: viewport_scene.cpp
src/rolechat/actor/: ActorOutfit.cpp  IActorData.cpp  JsonActorData.cpp
src/rolechat/audio/: blip_config.cpp  blip_config.h
src/rolechat/background/: IBackgroundData.cpp  JsonBackgroundData.cpp
src/rolechat/config/: ConfigUserSettings.cpp
src/rolechat/filesystem/: RCDir.cpp  RCFile.cpp
tests/: json_test.cpp
(+8 files in other folders)
